# bot_discord

./: .gitignore  Dockerfile  README.md  TERMUX_SETUP.md  doker-compose.yml  main.py  pyproject.toml  requirements.txt  test_download.py
.github/workflows/: build.yml
bot/: bot.py
config/: cookies.txt.example
logs/: .gitignore
src/: logger.py
src/bot/: bot.py  player_mixin.py  playlist_mixin.py  spotify_mixin.py  ui.py  utils.py  youtube_mixin.py
src/bot/services/: __init__.py  player_service.py  playlist_service.py  youtube_service.py
src/bot/ui/: __init__.py
src/cogs/: music_cog.py  playlist_cog.py
src/models/: player_state.py
src/repositories/: playlist_repository.py
src/services/: player_service.py  player_status.py  player_status_mixin.py  playlist_add.py  playlist_add_bulk.py  playlist_add_mixin.py  playlist_manage.py  playlist_manage_mixin.py  playlist_nav.py  playlist_resolver.py  playlist_service.py  spotify_client.py  spotify_service.py  youtube_search.py  youtube_search_mixin.py  youtube_service.py
src/setup/: cli_setup.py
src/ui/: pagination.py
src/utils/: __init__.py  embeds.py  errors.py  formatters.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: player.js
src/web/templates/: player.html
web/: __init__.py  app.py
web/static/css/: style.css
web/static/js/: player.js
web/templates/: player.html
