[project]
name = "bot-discord"
version = "1.0.0"
description = "Bot Discord para reprodução de áudio do YouTube"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.0.0",
    "PyNaCl>=1.5.0",
    "yt-dlp>=2024.0.0",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]

